Adding global addDri Manual on starting as service

--- a/devshelf.conf
+++ b/devshelf.conf
@@ -6,6 +6,14 @@
 # logfile: /var/log/devshelf.log
 #
 # Based on https://gist.github.com/jinze/3748766
+#
+# To use it as service on Ubuntu:
+# sudo cp devshelf.conf /etc/init.d/devshelf
+# sudo chmod a+x /etc/init.d/devshelf
+# update-rc.d devshelf defaults
+#
+# Then use commands:
+# service devshelf <command (start|stop|etc)>
 
 NAME=devshelf                            # Unique name for the application
 SOUREC_DIR=/home/user/devshelf           # Location of the application source
