Changing default port Global vars visual defining

--- a/devshelf.conf
+++ b/devshelf.conf
@@ -37,6 +37,7 @@ start() {
     touch $pidfile
     chown $user $pidfile
 
+    iptables -t nat -A PREROUTING -i eth0 -p tcp --dport 80 -j REDIRECT --to-port 8080
     $forever start -p $forever_dir --pidFile $pidfile -l $logfile -a --sourceDir $SOUREC_DIR -c $COMMAND $SOURCE_NAME
 
     RETVAL=$?
