--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "deep-extend": "~0.2.6",
     "MD5": "~1.2.0",
     "gzippo": "0.2.0",
-    "shorthash": "0.0.2"
-  },
-  "devDependencies": {
+    "shorthash": "0.0.2",
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-watch": "~0.5.3",
