--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
     "base64": "~2.1.0",
-    "geoip-native": "0.0.8"
+    "geoip-native": "0.0.8",
+    "jade": "~1.2.0"
   }
 }
