--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-copy": "~0.4.1",
     "base64": "~2.1.0",
     "geoip-native": "0.0.8",
+    "octonode": "~0.5.0",
     "jade": "~1.2.0"
   }
 }
