--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "base64": "~2.1.0",
     "geoip-native": "0.0.8",
     "octonode": "~0.5.0",
-    "jade": "~1.2.0"
+    "jade": "~1.2.0",
+    "json5": "~0.2.0"
   }
 }
