Validation and form on/off toggler

--- a/core/options/common-options.json5
+++ b/core/options/common-options.json5
@@ -11,5 +11,13 @@
 
     voting : {
         enabled : true
+    },
+
+    form: {
+        enabled: true
+    },
+
+    validate: {
+        enabled: true
     }
 }
