--- a/public/ru/index.json5
+++ b/public/ru/index.json5
@@ -12,22 +12,22 @@
     "copy": "DevShelf.us 2014. Спасибо команде фронт-енд разработчиков <a href='http://corp.mail.ru/communications/odnoklassniki'>OK.ru</a>",
 
     "menu": [{
-        "name":"О проекте",
-        "link": "#!/about"
-    },{
         "name":"Добавить статью",
         "link": "addNewUrl"
     },{
         "name":"Букмарклет",
         "link": "#!/bookmarklet"
+    },{
+        "name":"О проекте",
+        "link": "#!/about"
     }],
 
     "footerSections": [{
         "sectionTitle": "О проекте",
-        "sectionText": "<p>Modern web application made for the community (for us!), by the community, to collect most relevant information about development technologies.</p> <p>With community rating, you will get only the best content existing in the open web.</p>"
+        "sectionText": "<p>DevShelf — это общественный проект для организации общей книжной полки с самыми лучшими материалами о технологиях. Приложение дает возможность добавлять любые интересные материалы на разную тематику с привязкой к тегам, по которым в дальнейшем можно легко ориентироваться.</p> <p>С помощью голосования за метриалы, выдача по тегам регулируется самим сообществом, показывая только самую релевантную информацию.</p>"
     },{
         "sectionTitle": "Как поучаствовать?",
-        "sectionText": "<p>Project is fully <a href='http://github.com/sourcejs/devshelf'>open source</a>, you can <a href='http://github.com/sourcejs/devshelf/tree/master/articles-data'>contribute links</a> to best articles, ideas and improve web application source code simply by leaving your pull requests.</p> <p>DevShelf is all  <strong>about storing best articles and tools</strong>, not your documentation. For documentation purposes, use <a href='http://devdocs.io'>devdocs.io</a>.</p>"
+        "sectionText": "<p>Проект полностью <a href='http://github.com/sourcejs/devshelf'>открыт для сообщества</a>, любой желающий может <a href='http://github.com/sourcejs/devshelf/tree/master/articles-data'>добавить статью</a>, предложить идею или самостоятельно улучшить приложение.</p>"
     }],
 
     "authTitle" : "Авторизация...",
@@ -55,16 +55,14 @@
         "aboutProject": "О проекте",
         "header": "Два дня &mdash; Один проект",
         "description": [
-            { "p": "After two extremely challenging days during the Hackaton (plus few commits afterwards), we are happy to introduce&nbsp;our latest project&nbsp;&mdash;&nbsp;<strong>DevShelf.us</strong>. This is modern, cutting-edge web application, which collects only the best and most rated articles about <strong>HTML5</strong> stack of technologies."},
-            { "p": "We provide search engine intelligence and base for <strong>your <a href='http://github.com/sourcejs/devshelf/tree/master/articles-data'>contributed data</a></strong> inside our application, to present you only best and relevant information about those new technologies, which you are looking for."},
-            { "p": "Project has been developed and now is supported by <a href='http://corp.mail.ru/en/communications/odnoklassniki'>OK.ru</a> front-end development team (creators of <a href='http://sourcejs.com'>Source</a> and <a href='http://operatino.github.io/MCSS/en/'>MCSS</a>), but as we are fully <a href='http://github.com/sourcejs/devshelf/tree/master/articles-data'>open source</a>, everybody can join us and <strong>make web a better place</strong>."},
-            { "p": "Зацените команду!"}
+            { "p": "DevShelf — это общественный проект для организации общей книжной полки с самыми лучшими материалами о технологиях. Приложение дает возможность добавлять любые интересные материалы на разную тематику с привязкой к тегам, по которым в дальнейшем можно легко ориентироваться."},
+            { "p": "Проект изначально был разработан в рамках хакатона командой из <a href='http://corp.mail.ru/communications/odnoklassniki'>OK.ru</a>, и ныне существует как <a href='http://github.com/sourcejs/devshelf'>открытое для сообщества</a> приложение."}
         ],
         "aboutTeam": "О команде",
         "theTeam": [
             {
                 "name": "Robert Haritonov",
-                "contacts": "<a href='http://twitter.com/operatino_en' target='_blank'>@operatino</a>, <a href='http://rhr.me' target='_blank'>rhr.me</a>",
+                "contacts": "<a href='http://twitter.com/operatino' target='_blank'>@operatino</a>, <a href='http://rhr.me' target='_blank'>rhr.me</a>",
                 "role": "Idea, organization, backend and launch."
             },
             {
