--- a/public/index.json5
+++ b/public/index.json5
@@ -116,6 +116,7 @@
     "formModalTitle": "Add new articles",
     "formURL": "URL",
     "formTitle": "Title",
+    "formDescription": "Description",
     "formCategory": "Category",
     "formTags": "Tags",
     "formLang": "Article language",
@@ -124,6 +125,7 @@
     "formAuthorMail": "Author mail",
     "formSubmit": "Add article",
     "formFailed": "Submit failed",
+    "formTagsEmptyError": "Please fill 'tags'",
     "formSuccess": "Pull Request created",
     "formDisabled": "Form currently inactive, please leave your Pull Request through GitHub",
 
