--- a/public/ru/index.json5
+++ b/public/ru/index.json5
@@ -115,6 +115,7 @@
     "formModalTitle": "Форма добавления статей",
     "formURL": "URL",
     "formTitle": "Заголовок",
+    "formDescription": "Описание",
     "formCategory": "Категория",
     "formTags": "Теги",
     "formLang": "Язык статьи",
@@ -123,6 +124,7 @@
     "formAuthorMail": "Email автора",
     "formSubmit": "Добавить статью",
     "formFailed": "Ошибка добавления",
+    "formTagsEmptyError": "Не заполнено поле с тегами",
     "formSuccess": "Pull Request создан",
     "formDisabled": "Форма на техническом обслуживании, пожалуйста, оставляйте свои Pull Request вручную",
 
