--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "geoip-native": "0.0.8",
     "octonode": "~0.5.0",
     "jade": "~1.2.0",
-    "json5": "~0.2.0"
+    "json5": "~0.2.0",
+    "grunt-hashres": "~0.4.1"
   }
 }
