--- a/public/ru/index.json5
+++ b/public/ru/index.json5
@@ -124,6 +124,7 @@
     "formAuthorMail": "Email автора",
     "formSubmit": "Добавить статью",
     "formFailed": "Ошибка добавления",
+    "formValidationFailed": "Ошибка валидации",
     "formTagsEmptyError": "Не заполнено поле с тегами",
     "formSuccess": "Pull Request создан",
     "formDisabled": "Форма на техническом обслуживании, пожалуйста, оставляйте свои Pull Request вручную",
