--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "octonode": "~0.5.0",
     "jade": "~1.2.0",
     "json5": "~0.2.0",
-    "grunt-hashres": "~0.4.1"
+    "grunt-hashres": "~0.4.1",
+    "request": "~2.34.0"
   }
 }
