--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jade": "~1.2.0",
     "json5": "~0.2.0",
     "grunt-hashres": "~0.4.1",
-    "request": "~2.34.0"
+    "request": "~2.34.0",
+    "load-grunt-tasks": "~0.4.0"
   }
 }
