--- a/package.json
+++ b/package.json
@@ -3,29 +3,30 @@
   "description": "Dev Community Library",
   "version": "0.0.1",
   "dependencies": {
-    "express": "~3.4.4",
-    "mongoose": "~3.8.0",
+    "MD5": "~1.2.0",
     "colors": "~0.6.2",
-    "extend": "~1.2.1",
-    "mustache": "~0.7.3",
-    "everyauth": "~0.4.5",
     "connect-mongostore": "0.0.10",
     "deep-extend": "~0.2.6",
-    "MD5": "~1.2.0",
-    "shorthash": "0.0.2",
-    "grunt": "~0.4.1",
+    "everyauth": "~0.4.5",
+    "express": "~3.4.4",
+    "extend": "~1.2.1",
+    "geoip-native": "0.0.8",
+    "grunt": "^0.4.5",
+    "grunt-casperjs": "^1.4.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-csso": "~0.5.0",
+    "grunt-hashres": "~0.4.1",
     "grunt-htmlcompressor": "~0.1.8",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "geoip-native": "0.0.8",
-    "octonode": "~0.5.0",
     "jade": "~1.2.0",
     "json5": "~0.2.0",
-    "grunt-hashres": "~0.4.1",
+    "load-grunt-tasks": "~0.4.0",
+    "mongoose": "~3.8.0",
+    "mustache": "~0.7.3",
+    "octonode": "~0.5.0",
     "request": "~2.34.0",
-    "load-grunt-tasks": "~0.4.0"
+    "shorthash": "0.0.2"
   }
 }
