--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "extend": "~1.2.1",
     "geoip-native": "0.0.8",
     "grunt": "^0.4.5",
-    "grunt-casperjs": "^1.4.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.7",
@@ -28,5 +27,8 @@
     "octonode": "~0.5.0",
     "request": "~2.34.0",
     "shorthash": "0.0.2"
+  },
+  "devDependencies": {
+    "grunt-casperjs": "^1.4.0"
   }
 }
