Fixing tags and undefined hash

--- a/public/ru/index.json5
+++ b/public/ru/index.json5
@@ -4,15 +4,15 @@
     //Current file language
     "lang": "ru",
 
-    "title": "DevShelf.us — Книжная полка разработчика",
+    "title": "DevShelf.us — Хаб статей про веб-разработку",
     "shortTitle": "DevShelf.us",
     "customTitle": {
         "about" : "О проекте",
         "bookmarklet" : "Букмарклет"
     },
     "logo": "DevShelf <sup class='beta'>beta</sup>",
-    "bannerText": "Книжная полка разработчика",
-    "description": "Книжная полка разработчика. Коллекция лучших материалов от сообщества для сообщества, с рейтингом от пользователей.",
+    "bannerText": "Хаб статей про веб-разработку",
+    "description": "Хаб статей про веб-разработку. Коллекция лучших материалов от сообщества для сообщества, с рейтингом от пользователей.",
     "searchBtn": "Найти",
     "searchExample": "Например: box-shadow",
     "copy": "DevShelf.us 2014. Спасибо команде фронт-енд разработчиков <a href='http://v.ok.ru'>OK.ru</a>",
@@ -30,7 +30,7 @@
 
     "footerSections": [{
         "sectionTitle": "О проекте",
-        "sectionText": "<p>DevShelf — это общественный проект для организации общей книжной полки с самыми лучшими материалами о технологиях. Приложение дает возможность добавлять любые интересные материалы на разную тематику с привязкой к тегам, по которым в дальнейшем можно легко ориентироваться.</p> <p>С помощью голосования за метриалы, выдача по тегам регулируется самим сообществом, показывая только самую релевантную информацию.</p>"
+        "sectionText": "<p>DevShelf — это общественный проект для организации хаба статей с самыми лучшими материалами о технологиях. Приложение дает возможность добавлять любые интересные материалы на разную тематику с привязкой к тегам, по которым в дальнейшем можно легко ориентироваться.</p> <p>С помощью голосования за метриалы, выдача по тегам регулируется самим сообществом, показывая только самую релевантную информацию.</p>"
     },{
         "sectionTitle": "Как поучаствовать?",
         "sectionText": "<p>Проект полностью <a href='http://github.com/sourcejs/devshelf'>открыт для сообщества</a>, любой желающий может <a href='http://github.com/sourcejs/devshelf/tree/master/articles-data'>добавить статью</a>, предложить идею или самостоятельно улучшить приложение.</p>"
