--- a/public/ru/index.json5
+++ b/public/ru/index.json5
@@ -33,7 +33,7 @@
         "sectionText": "<p>DevShelf — это общественный проект для организации хаба статей с самыми лучшими материалами о технологиях. Приложение дает возможность добавлять любые интересные материалы на разную тематику с привязкой к тегам, по которым в дальнейшем можно легко ориентироваться.</p> <p>С помощью голосования за метриалы, выдача по тегам регулируется самим сообществом, показывая только самую релевантную информацию.</p>"
     },{
         "sectionTitle": "Как поучаствовать?",
-        "sectionText": "<p>Проект полностью <a href='http://github.com/sourcejs/devshelf'>открыт для сообщества</a>, любой желающий может <a href='http://github.com/sourcejs/devshelf/tree/master/articles-data'>добавить статью</a>, предложить идею или самостоятельно улучшить приложение.</p>"
+        "sectionText": "<p>Проект полностью <a href='http://github.com/sourcejs/devshelf'>открыт для сообщества</a>, любой желающий может <a href='https://github.com/devshelf/devshelf-articles'>добавить статью</a>, предложить идею или самостоятельно улучшить приложение.</p>"
     }],
 
     "authTitle" : "Авторизация...",
