--- a/public/index.json5
+++ b/public/index.json5
@@ -68,7 +68,7 @@
         "description": [
             { "p": "DevShelf is a modern web application made for the community (for us!), by the community, to collect most relevant information about development technologies."},
             { "p": "We provide search engine intelligence and base for <strong>your <a href='https://github.com/devshelf/devshelf-articles'>contributed data</a></strong> inside our application, to present you only best and relevant information about those new technologies, which you are looking for."},
-            { "p": "Originally project was developed by <a href='http://corp.mail.ru/communications/odnoklassniki'>OK.ru</a> front-end team at a two-day hackathon, and now fully belogns to the <a href='http://github.com/sourcejs/devshelf'>community</a>."}
+            { "p": "Originally project was developed by <a href='http://corp.mail.ru/communications/odnoklassniki'>OK.ru</a> front-end team at a two-day hackathon, and now fully belongs to the <a href='http://github.com/sourcejs/devshelf'>community</a>."}
         ],
         "aboutTeam": "About the team",
         "theTeam": [
@@ -118,7 +118,7 @@
     		{ "p": "Source code is available at <a href='https://github.com/sourcejs/devshelf'>project GitHub repo</a>, and is open for your contributions." }
     	],
     	"bookmarkletUsageTitle": "How to use?",
-    	"bookmarkletUsageDesc": "Drag this button to favorits panel:",
+    	"bookmarkletUsageDesc": "Drag this button to favorites panel:",
     	"bookmarkletLinkTitle": "Send to DevShelf"
     },
 
@@ -160,7 +160,7 @@
         "forkError": "Failed to create fork",
         "unauthorized": "Authorization error",
         "validationFailed": "Validation failed",
-        "PRcreated": "Pull Request crealted"
+        "PRcreated": "Pull Request created"
     },
 
     //Authorization
