Fixing main page activation after entering invalid hash Scroll to top on page change

--- a/public/ru/index.json5
+++ b/public/ru/index.json5
@@ -173,7 +173,7 @@
             },
             {
                 "link": "/#!/search/best_practises",
-                "title": "Лучшие практики в веб разоработке"
+                "title": "Лучшие практики в веб разработке"
             },
             {
                 "link": "/#!/search/css_methodologies",
