Switching htmlcompressor to htmlmin

--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-csso": "~0.5.0",
     "grunt-hashres": "~0.4.1",
-    "grunt-htmlcompressor": "~0.1.8",
     "jade": "~1.2.0",
     "load-grunt-tasks": "~0.4.0",
     "mongoose": "~3.8.0",
     "mustache": "~0.7.3",
     "octonode": "~0.5.0",
+    "prerender-node": "~1.0.1",
     "request": "~2.34.0",
     "shorthash": "0.0.2",
-    "prerender-node": "~1.0.1",
     "sitemap": "~0.7.2"
   },
   "devDependencies": {
